cmake_minimum_required(VERSION 3.30)
project(ObjectOrientedPrograming)

set(CMAKE_CXX_STANDARD 20)

add_executable(ObjectOrientedPrograming main.cpp)
add_executable(ObjectOrientedPrograming grades.cpp)
add_executable(ObjectOrientedPrograming grades.cpp)
add_executable(ObjectOrientedPrograming grades.cpp)
add_executable(ObjectOrientedPrograming grades.cpp)
