cmake_minimum_required(VERSION 3.30)
project(ObjectOrientedPrograming)

set(CMAKE_CXX_STANDARD 20)

add_executable(ObjectOrientedPrograming grades.cpp)
add_executable(book book.cpp)
add_executable(matrix matrix.cpp)
add_executable(patient patient.cpp)
add_executable(planeTicket planeTicket.cpp)
add_executable(smartphone smartphone.cpp)
add_executable(student student.cpp)